--- a/spring-tv-series/src/main/resources/application.properties
+++ b/spring-tv-series/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/generation
-spring.datasource.username=root
-spring.datasource.password=thisdbissecure
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto= create-drop
